# etf-predictor

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: daily_train.yml
app/: db.py
db/: schema.sql
ml/: config.py  data.py  features.py  news.py  predict.py  train.py
scripts/: apply_schema.py  backfill.py  generate_post.py  probe_inference.py  setup_hf_space.py
tests/: test_features.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/_components/: EquityCurve.tsx  ThresholdChart.tsx
web/app/about/: page.tsx
web/app/backtest/: page.tsx
web/app/blog/: page.tsx
web/app/disclaimer/: page.tsx
web/app/etf/[symbol]/: page.tsx
web/app/model/: page.tsx
web/app/post/[slug]/: page.tsx
web/app/privacy/: page.tsx
web/app/today/: page.tsx
web/components/: theme-toggle.tsx
web/components/ui/: badge.tsx  card.tsx  stat-tile.tsx
web/content/posts/: 2026-05-11.mdx
web/lib/: format.ts  posts.ts  queries.ts  supabase.ts  types.ts
